fix image spacing

--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ a:hover, a:active {
 
 .project-container {
   position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 .project-container:hover .overlay {
@@ -62,7 +64,9 @@ a:hover, a:active {
 .image {
   display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .text {
